[tool.poetry]
name = "actions-python"
description = "GitHub Actions Workflows for Python"
version = "1.0.0"
authors = ["BlindfoldedSurgery <team@blindfolded.surgery>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
commitizen = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
version_scheme = "semver"
tag_format = "v$major"
version = "0.1.0"
changelog_incremental = true
